--- a/public/templates/FooterTemplate.html
+++ b/public/templates/FooterTemplate.html
@@ -1,13 +1,6 @@
-<div class="container-fluid footer-container">
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div class="container-fluid centre">
-
-                <% var d = new Date().getFullYear(); %>
-
-                <footer>&copy; Will Sutherland <%= d %> </footer>
-            </div>
-        </div>
-    </div>
+<div class="container">
+    <footer>
+        <hr>
+        &copy; Sheffield Team <%= new Date().getFullYear() %>
+    </footer>
 </div>
