--- a/public/templates/NavTemplate.html
+++ b/public/templates/NavTemplate.html
@@ -1,5 +1,5 @@
 <nav class="navbar nav-home navbar-default navbar-static-top" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -7,12 +7,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Gradients</a>
+            <a class="navbar-brand" href="#">CISCO Sheffield</a>
         </div>
         <div class="collapse navbar-collapse bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right nav-list">
-                <li><a href="#/signUp">SIGN UP</a></li>
-                <li><a href="#">LOGIN</a></li>
+                <li><a href="#">HOME</a></li>
             </ul>
         </div>
     </div>
