--- a/public/templates/MapTemplate.html
+++ b/public/templates/MapTemplate.html
@@ -1,7 +1,5 @@
+<script type="text/javascript" src="js/map.js"></script>
 <div class="container">
-    <div id="map">
-        <hr>
-        <p>This is the map div.</p>
-    </div>
+    <div id="map"></div>
 </div>
 
