Added manchester page with world graphic visualisation

--- a/public/templates/NavTemplate.html
+++ b/public/templates/NavTemplate.html
@@ -12,6 +12,7 @@
         <div class="collapse navbar-collapse bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right nav-list">
                 <li><a href="#">HOME</a></li>
+                <li><a href="#/manchester">MANCHESTER</a></li>
             </ul>
         </div>
     </div>
