--- a/public/templates/MapTemplate.html
+++ b/public/templates/MapTemplate.html
@@ -28,6 +28,11 @@
     	<span>Stockport: </span><span id="stockportPercent"></span><br>
     	<span>Bolton: </span><span id="boltonPercent"></span><br>
 
+    	<br><br>
+
+    	<h3>Busiest Stations</h3>
+    	<p id="busiestStations"></p>
+
     </div>
 
     <div id="stationsMap"></div>
