--- a/public/templates/HomeTemplate.html
+++ b/public/templates/HomeTemplate.html
@@ -1,8 +1,6 @@
 <div class="container">
-    <h1>Cisco IoE Challenge</h1>
-    <h2>Sheffield Team</h2>
+    <h1>Greater Manchester Congestion Monitor</h1>
 
     <hr>
 
-    <p>This is just a mockup for us to build on.</p>
 </div>
