--- a/public/templates/NavTemplate.html
+++ b/public/templates/NavTemplate.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">CISCO Sheffield</a>
+            <a class="navbar-brand" href="#">TFGM</a>
         </div>
         <div class="collapse navbar-collapse bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right nav-list">
