--- a/public/templates/MapTemplate.html
+++ b/public/templates/MapTemplate.html
@@ -32,6 +32,17 @@
 
     	<h3>Busiest Stations</h3>
     	<p id="busiestStations"></p>
+		<br><br>
+
+		<h3>Car Park Capacity</h3>
+		<span>Aquatic Centre: </span><span id="AquaticCentreCapacity"></span><br>
+
+		<br><br>
+
+		<h3>Car Park Spaces</h3>
+		<span>Aquatic Centre: </span><span id="AquaticCentrePara"></span><br>
+
+		<br><br>
 
     </div>
 
