Remove paragraphs and make full width

--- a/public/templates/MapTemplate.html
+++ b/public/templates/MapTemplate.html
@@ -1,53 +1,5 @@
-<div class="container">
+<div class="fluid-container">
 
-    <div class="row">
+	<div id="stationsMap"></div>
 
-	    <div class="col-md-8">
-	    	<div id="stationsMap"></div>
-
-	    </div>
-
-	    <div class="col-md-4">
-	    	<h3>Station Thresholds</h3>
-	    	<span>Manchester Picadilly: </span><span id="ManchesterPicadillyThreshold"></span><br>
-	    	<span>Manchester Oxford Road: </span><span id="ManchesterOxfordRoadThreshold"></span><br>
-	    	<span>Manchester Victoria: </span><span id="ManchesterVictoriaThreshold"></span><br>
-	    	<span>Stockport: </span><span id="StockportThreshold"></span><br>
-	    	<span>Bolton: </span><span id="BoltonThreshold"></span><br>
-
-	    	<h3>Number of People in Station</h3>
-	    	<span>Manchester Picadilly: </span><span id="picadillyPara"></span><br>
-	    	<span>Manchester Oxford Road: </span><span id="oxfordRoadPara"></span><br>
-	    	<span>Manchester Victoria: </span><span id="victoriaPara"></span><br>
-	    	<span>Stockport: </span><span id="stockportPara"></span><br>
-	    	<span>Bolton: </span><span id="boltonPara"></span><br>
-
-	    	<h3>Crowding</h3>
-	    	<span>Manchester Picadilly: </span><span id="picadillyPercent"></span><br>
-	    	<span>Manchester Oxford Road: </span><span id="oxfordRoadPercent"></span><br>
-	    	<span>Manchester Victoria: </span><span id="victoriaPercent"></span><br>
-	    	<span>Stockport: </span><span id="stockportPercent"></span><br>
-	    	<span>Bolton: </span><span id="boltonPercent"></span><br>
-
-    	<h3>Busiest Stations</h3>
-    	<p id="busiestStations"></p>
-		<br><br>
-
-		<h3>Car Park Capacity</h3>
-		<span>Aquatic Centre: </span><span id="AquaticCentreCapacity"></span><br>
-
-		<br><br>
-
-		<h3>Car Park Spaces</h3>
-		<span>Aquatic Centre: </span><span id="AquaticCentrePara"></span><br>
-
-		<br><br>
-
-    </div>
-    
-    <br>
- 
-
-    
 </div>
-
