--- a/public/templates/FooterTemplate.html
+++ b/public/templates/FooterTemplate.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="fluid-container margin-small">
     <footer>
         <hr>
         &copy; Sheffield Team <%= new Date().getFullYear() %>
