--- a/public/templates/NavTemplate.html
+++ b/public/templates/NavTemplate.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">TFGM</a>
+            <img class="tfgm" src="tfgm.png"/><a class="navbar-brand" href="#">Greater Manchester Congestion Monitor</a>
         </div>
         <div class="collapse navbar-collapse bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right nav-list">
