--- a/public/templates/NavTemplate.html
+++ b/public/templates/NavTemplate.html
@@ -8,11 +8,12 @@
                 <span class="icon-bar"></span>
             </button>
             <img class="tfgm" src="tfgm.png"/><a class="navbar-brand" href="#">Greater Manchester Congestion Monitor</a>
+            <span class="fa fa-clock-o icon"></span>
         </div>
         <div class="collapse navbar-collapse bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right nav-list">
                 <li><a href="#">HOME</a></li>
-                <li><a href="#/manchester">MANCHESTER</a></li>
+                <!--<li><a href="#/manchester">MANCHESTER</a></li>-->
             </ul>
         </div>
     </div>
